.......P.. [ZBX-3817] improved performance of the "data sender" process (Sasha)
.......PS. [ZBX-5436] added support of AllowRoot paramater by server and proxy daemons (Sasha)
..F....... [ZBX-5180] maintenance periods form redesign (Vedmak)
.......PS. [ZBXNEXT-1335] pingers work without connection to a database (Sasha)
..F....... [ZBX-5127] regular expressions form redesign (Vedmak)

Bug fixes:
A......... [ZBX-5498] improved performance of template linkage operations in API (Vedmak)
A......... [ZBX-5498] applications api refactoring (Vedmak)
..F....... [ZBX-5560] fixed recovery sound saved incorrectly in user profile (Vedmak)
..F....... [ZBX-2770] added autofocus for first fields in frontend forms (Vedmak)
..F....... [ZBX-5463] fixed inability to login if http auth is enabled and frontend access is set to internal (Vedmak)
...G...PS. [ZBX-5383] maximum data size accepted via Zabbix communication protocol is limited to 64 MB (Andris)
..F....... [ZBX-5167] fixed incorrect screen count on the templated screen configuration page (Vedmak)
..F....... [ZBX-5142] changed media type field label from 'Description' to 'Name' (Vedmak)
....I..... [ZBX-5314] increased size of autoincrement fields for PostgreSQL database (Sasha)
..F....... [ZBX-1845] added tabs to host massupdate form (Vedmak)

--------------------------------------------------------------------------------
Changes for 2.0.3rc1

New features:
...GI..... [ZBX-5171] got rid of agent ipv6 library dependency on older HP-UX machines (dimir)
........S. [ZBX-5450] added support of "KMGTsmhdw" suffixes in the second parameter of count() function (Sasha)
A.F....... [ZBX-1357] added American English translation; thanks to Zabbix translators (Richlv)
A......... [ZBX-2060] implemented the "expandExpression" parameter for the trigger.get and triggerprototype.get methods (Pavels)
A.F....... [ZBXNEXT-1253] implemented flicker-free screens (Eduard)