@@ -355,6 +355,7 @@ class CTemplate extends CHostGeneral {
 			}
 			else{
 				$template['templateid'] = $template['hostid'];
+				unset($template['hostid']);
 				$templateids[$template['templateid']] = $template['templateid'];
 
 				if ($options['output'] == API_OUTPUT_SHORTEN) {
@@ -378,8 +379,8 @@ class CTemplate extends CHostGeneral {
 					if (!is_null($options['selectItems']) && !isset($result[$template['templateid']]['items'])) {
 						$template['items'] = array();
 					}
-					if (!is_null($options['selectDiscoveries']) && !isset($result[$template['hostid']]['discoveries'])) {
-						$result[$template['hostid']]['discoveries'] = array();
+					if (!is_null($options['selectDiscoveries']) && !isset($result[$template['templateid']]['discoveries'])) {
+						$result[$template['templateid']]['discoveries'] = array();
 					}
 					if (!is_null($options['selectTriggers']) && !isset($result[$template['templateid']]['triggers'])) {
 						$template['triggers'] = array();
@@ -434,10 +435,10 @@ class CTemplate extends CHostGeneral {
 
 					// triggerids
 					if (isset($template['triggerid']) && is_null($options['selectTriggers'])) {
-						if (!isset($result[$template['hostid']]['triggers']))
-							$result[$template['hostid']]['triggers'] = array();
+						if (!isset($result[$template['templateid']]['triggers']))
+							$result[$template['templateid']]['triggers'] = array();
 
-						$result[$template['hostid']]['triggers'][] = array('triggerid' => $template['triggerid']);
+						$result[$template['templateid']]['triggers'][] = array('triggerid' => $template['triggerid']);
 						unset($template['triggerid']);
 					}
 
@@ -472,7 +473,7 @@ class CTemplate extends CHostGeneral {
 			foreach ($groups as $groupid => $group) {
 				$ghosts = $group['hosts'];
 				unset($group['hosts']);
-				foreach ($ghosts as $hnum => $template) {
+				foreach ($ghosts as $template) {
 					$result[$template['hostid']]['groups'][] = $group;
 				}
 			}
@@ -499,7 +500,7 @@ class CTemplate extends CHostGeneral {
 						foreach ($template['parentTemplates'] as $parentTemplate) {
 							if (!is_null($options['limitSelects'])) {
 								if (!isset($count[$parentTemplate['templateid']])) $count[$parentTemplate['templateid']] = 0;
-								$count[$parentTemplate['hostid']]++;
+								$count[$parentTemplate['templateid']]++;
 
 								if ($count[$parentTemplate['templateid']] > $options['limitSelects']) continue;
 							}
@@ -514,7 +515,7 @@ class CTemplate extends CHostGeneral {
 				$objParams['groupCount'] = 1;
 
 				$templates = API::Template()->get($objParams);
-				$templates = zbx_toHash($templates, 'hostid');
+				$templates = zbx_toHash($templates, 'templateid');
 				foreach ($result as $templateid => $template) {
 					if (isset($templates[$groupid]))
 						$result[$templateid]['templates'] = $templates[$templateid]['rowscount'];
@@ -600,7 +601,7 @@ class CTemplate extends CHostGeneral {
 				$objParams['groupCount'] = 1;
 
 				$templates = API::Template()->get($objParams);
-				$templates = zbx_toHash($templates, 'hostid');
+				$templates = zbx_toHash($templates, 'templateid');
 				foreach ($result as $templateid => $template) {
 					if (isset($templates[$groupid]))
 						$result[$templateid]['parentTemplates'] = $templates[$templateid]['rowscount'];
@@ -846,11 +847,11 @@ class CTemplate extends CHostGeneral {
 
 				foreach ($screens as $screenid => $screen) {
 					if (!is_null($options['limitSelects'])) {
-						if (count($result[$screen['hostid']]['screens']) >= $options['limitSelects']) continue;
+						if (count($result[$screen['templateid']]['screens']) >= $options['limitSelects']) continue;
 					}
 
 					unset($screens[$screenid]['templates']);
-					$result[$screen['hostid']]['screens'][] = &$screens[$screenid];
+					$result[$screen['templateid']]['screens'][] = &$screens[$screenid];
 				}
 			}
 			elseif (API_OUTPUT_COUNT == $options['selectScreens']) {
@@ -858,7 +859,7 @@ class CTemplate extends CHostGeneral {
 				$objParams['groupCount'] = 1;
 
 				$screens = API::TemplateScreen()->get($objParams);
-				$screens = zbx_toHash($screens, 'hostid');
+				$screens = zbx_toHash($screens, 'templateid');
 				foreach ($result as $templateid => $template) {
 					if (isset($screens[$templateid]))
 						$result[$templateid]['screens'] = $screens[$templateid]['rowscount'];
@@ -1240,7 +1241,7 @@ class CTemplate extends CHostGeneral {
 		// TODO: remove info from API
 		foreach ($delTemplates as $template) {
 			info(_s('Deleted: Template "%1$s".', $template['name']));
-			add_audit_ext(AUDIT_ACTION_DELETE, AUDIT_RESOURCE_HOST, $template['hostid'], $template['host'], 'hosts', NULL, NULL);
+			add_audit_ext(AUDIT_ACTION_DELETE, AUDIT_RESOURCE_HOST, $template['templateid'], $template['host'], 'hosts', NULL, NULL);
 		}
 
 		return array('templateids' => $templateids);
