@@ -314,7 +314,12 @@ if (isset($_REQUEST['filter_hostname']) && !zbx_empty($_REQUEST['filter_hostname
 		$hostid = API::Template()->getObjects(array('name' => $_REQUEST['filter_hostname']));
 	}
 	$hostid = reset($hostid);
-	$hostid = $hostid ? $hostid['hostid'] : 0;
+	if ($hostid) {
+		$hostid = isset($hostid['hostid']) ? $hostid['hostid'] : $hostid['templateid'];
+	}
+	else {
+		$hostid = 0;
+	}
 }
 
 // subfilters
