@@ -8,6 +8,7 @@ New features:
 ..F....... [ZBX-5127] regular expressions form redesign (Vedmak)
 
 Bug fixes:
+A......... [ZBX-3684] fixed template.get method returns excessive 'hostid' field (Vedmak)
 A......... [ZBX-5498] improved performance of template linkage operations in API (Vedmak)
 A......... [ZBX-5498] applications api refactoring (Vedmak)
 ..F....... [ZBX-5560] fixed recovery sound saved incorrectly in user profile (Vedmak)
